# VyahanBolt

./: .gitignore  App.tsx  README.md  db.sqlite3  index.html  main.py  manage.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  types.ts  vite.config.ts
Auth/: api.py  serializers.py
VyahanBolt/: asgi.py  settings.py
api/: Dockerfile  docker-compose.yml  main.py  manage.py  pyproject.toml
api/Auth/: api.py
api/Messaging/: admin.py  api.py  models.py  serializers.py
api/Messaging/migrations/: 0001_initial.py
api/VyahanBolt/: AdminOnlyMiddleware.py  settings.py  urls.py  wsgi.py
api/analytics/: api.py  serializers.py
api/core/: api.py  constants.py  serializers.py  utils.py
api/core/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_username.py
api/organization/: api.py  middleware.py  models.py  serializers.py
api/organization/migrations/: 0001_initial.py  0007_create_bus.py  (+3 more)
api/shipment/: admin.py  api.py  models.py  serializers.py
components/: BusSelectionModal.tsx  Layout.tsx  ReceiptModal.tsx
context/: AppContext.tsx
core/: api.py  models.py  serializers.py  sms_service.py  utils.py
core/migrations/: 0004_delete_user.py
django_bolt_with_batteries/: asgi.py  settings.py  urls.py  wsgi.py
hooks/: useApi.ts
organization/: admin.py  api.py  models.py
organization/migrations/: 0002_branch_owner_organization_owner.py  0004_remove_branch_password.py  0006_alter_branch_owner_alter_organization_owner.py
services/: apiService.ts  geminiService.ts
views/: Analytics.tsx  BookParcel.tsx  Buses.tsx  Dashboard.tsx  Login.tsx  Messages.tsx  Offices.tsx  OrganizationNotFound.tsx  ParcelList.tsx  ShipmentDetails.tsx  Tracking.tsx
(+6 files in other folders)
